Parse font family names as UTF-8 instead of latin-1

Change FontPlatformData::FontFamilyName to parse the font family name as
UTF-8 instead of latin-1 as that is the encoding of the localized family
name provided by the API. Verified on Linux, Windows 7/10, and Mac OS X.

No test as I was unable to find a font with a localized non-latin family
name under a suitable license.

Bug: 667154
Change-Id: Iddb7932b68681824062cc2a7bf163459fc356cbb
Reviewed-on: https://chromium-review.googlesource.com/807527
Reviewed-by: Stefan Zager <szager@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521588}
Former-commit-id: 5c23fe6e90705997009f51b354eb7611b2e5e4ba